# rust-excercises

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
csv-parser/: .gitignore  Cargo.toml  README.md
csv-parser/benches/: bench.rs
csv-parser/examples/: simple.rs
csv-parser/src/: lib.rs
examples/: simple.rs
src/: lib.rs
