[package]
name = "csv-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

# enable release debug symbols
[profile.release]
debug = true
[rust]
debuginfo-level = 1

[dependencies]
finite-state-machine = { git = "https://github.com/koriwi/finite-state-machine.git", branch = "master" }
[dev-dependencies]
criterion = "0.4.0"
