[package]
name = "csv-parser"
version = "0.1.0"
edition = "2021"

[features]
verbose = ["finite-state-machine/verbose"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
finite-state-machine = { git = "https://github.com/koriwi/finite-state-machine.git" }

[dev-dependencies]
criterion = "0.4.0"
